<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start"

            android:background="@android:color/white"
            android:paddingLeft="20dp"
            android:text="@string/setting_color"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"

            />

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:background="@android:color/white"
            android:paddingLeft="20dp"
            android:text="@string/setting_lot"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart" />

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start"

            android:background="@android:color/white"
            android:paddingLeft="20dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/setting_notification"
            android:textAlignment="viewStart" />

        <View android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD" />




    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/utap"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>

    <!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--tools:context="com.example.android.utap_scratch.Set_test">-->

    <!--</android.support.constraint.ConstraintLayout>-->



    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.example.android.utap.MainActivity">-->


    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:text="HELOOOO"/>-->

    <!--</RelativeLayout>-->