<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uta.utap.ColorSettings">
    <!--tools:showIn="@layout/activity_color_set">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/choose_color_for_full_parking"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                 />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp">

            </Spinner>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/choose_color_for_busy_parking"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                 />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp">

            </Spinner>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/choose_color_for_free_parking"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                 />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#BDBDBD" />


    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/utap"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


    <!--<Spinner-->
    <!--android:id="@+id/spinner2"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->

    <!--<Spinner-->
    <!--android:id="@+id/spinner3"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_below="@+id/spinner2"-->
    <!--android:layout_marginTop="23dp" />-->

    <!--<Spinner-->
    <!--android:id="@+id/spinner4"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_below="@+id/spinner3"-->
    <!--android:layout_marginTop="22dp" />-->
</RelativeLayout>

